Add employee info section to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <option value="">Cargando colaboradores…</option>
       </select>
 
+      <!-- INFO DEL EMPLEADO -->
+      <div id="emp-info" class="emp-info" hidden>
+        <div><strong>Bodega:</strong> <span id="emp-bod">—</span></div>
+        <div><strong>Ingreso:</strong> <span id="emp-ing">—</span></div>
+        <div><strong>Días 2026:</strong> <span id="emp-cupo">—</span></div>
+      </div>
+
       <div class="grid">
         <div>
           <label for="start">Inicio</label>
@@ -47,6 +54,6 @@
     window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtiYXNla3Znc2V2dHdqeXB6em56Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIwNTg3NjUsImV4cCI6MjA3NzYzNDc2NX0.a38X1iS6xhlcoVlrjQ99BcoiVf9REMuVzYR82wYnWHY";
   </script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/+esm"></script>
-  <script type="module" src="main.js?v=11"></script>
+  <script type="module" src="main.js?v=13"></script>
 </body>
 </html>
