--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <div id="emp-info" class="emp-info" hidden>
         <div><strong>Bodega:</strong> <span id="emp-bod">—</span></div>
         <div><strong>Ingreso:</strong> <span id="emp-ing">—</span></div>
-        <div><strong>Días 2026:</strong> <span id="emp-cupo">—</span></div>
+        <div><strong>Cupo 2026:</strong> <span id="emp-cupo">—</span></div>
+        <div><strong>Usados 2026:</strong> <span id="emp-used">—</span></div>
+        <div><strong>Restantes 2026:</strong> <span id="emp-left">—</span></div>
       </div>
 
       <div class="grid">
@@ -54,6 +56,6 @@
     window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtiYXNla3Znc2V2dHdqeXB6em56Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIwNTg3NjUsImV4cCI6MjA3NzYzNDc2NX0.a38X1iS6xhlcoVlrjQ99BcoiVf9REMuVzYR82wYnWHY";
   </script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/+esm"></script>
-  <script type="module" src="main.js?v=14"></script>
+  <script type="module" src="main.js?v=15"></script>
 </body>
 </html>
