--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Solicitar Vacaciones 2026</h1>
-    <p class="hint">Selecciona tu nombre y el rango de fechas. Las reglas se validan automáticamente (status=Pendiente).</p>
+    <p class="hint">Selecciona tu nombre y el rango de fechas. Las reglas se validan automáticamente (status = Pendiente).</p>
 
     <div class="card">
       <label for="search">Buscar nombre</label>
@@ -20,13 +20,15 @@
         <option value="">Cargando colaboradores…</option>
       </select>
 
-      <!-- INFO DEL EMPLEADO -->
+      <!-- Panel con información del colaborador -->
       <div id="emp-info" class="emp-info" hidden>
-        <div><strong>Bodega:</strong> <span id="emp-bod">—</span></div>
-        <div><strong>Ingreso:</strong> <span id="emp-ing">—</span></div>
-        <div><strong>Cupo 2026:</strong> <span id="emp-cupo">—</span></div>
-        <div><strong>Usados 2026:</strong> <span id="emp-used">—</span></div>
-        <div><strong>Restantes 2026:</strong> <span id="emp-left">—</span></div>
+        <div><strong>Localización:</strong> <span id="v-localizacion">-</span></div>
+        <div><strong>Departamento:</strong> <span id="v-departamento">-</span></div>
+        <div><strong>Bodega:</strong> <span id="v-bodega">-</span></div>
+        <div><strong>Ingreso:</strong> <span id="v-ingreso">-</span></div>
+        <div><strong>Cupo 2026:</strong> <span id="v-cupo">-</span></div>
+        <div><strong>Usados 2026:</strong> <span id="v-usado">-</span></div>
+        <div><strong>Restantes 2026:</strong> <span id="v-restante">-</span></div>
       </div>
 
       <div class="grid">
@@ -50,12 +52,12 @@
     </details>
   </div>
 
-  <!-- Credenciales Supabase -->
+  <!-- Credenciales Supabase (rellena las tuyas) -->
   <script>
     window.SUPABASE_URL = "https://kbasekvgsevtwjypzznz.supabase.co";
     window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtiYXNla3Znc2V2dHdqeXB6em56Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIwNTg3NjUsImV4cCI6MjA3NzYzNDc2NX0.a38X1iS6xhlcoVlrjQ99BcoiVf9REMuVzYR82wYnWHY";
   </script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/+esm"></script>
-  <script type="module" src="main.js?v=15"></script>
+  <script type="module" src="main.js?v=2026.11.03"></script>
 </body>
 </html>
