--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div><strong>Departamento:</strong> <span id="v-departamento">-</span></div>
         <div><strong>Bodega:</strong> <span id="v-bodega">-</span></div>
         <div><strong>Ingreso:</strong> <span id="v-ingreso">-</span></div>
+        <div><strong>Elegible 2026 desde:</strong> <span id="v-elegible">-</span></div>
         <div><strong>Cupo 2026:</strong> <span id="v-cupo">-</span></div>
         <div><strong>Usados 2026:</strong> <span id="v-usado">-</span></div>
         <div><strong>Restantes 2026:</strong> <span id="v-restante">-</span></div>
@@ -52,12 +53,12 @@
     </details>
   </div>
 
-  <!-- Credenciales Supabase (rellena las tuyas) -->
+  <!-- Credenciales Supabase -->
   <script>
     window.SUPABASE_URL = "https://kbasekvgsevtwjypzznz.supabase.co";
     window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtiYXNla3Znc2V2dHdqeXB6em56Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIwNTg3NjUsImV4cCI6MjA3NzYzNDc2NX0.a38X1iS6xhlcoVlrjQ99BcoiVf9REMuVzYR82wYnWHY";
   </script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/+esm"></script>
-  <script type="module" src="main.js?v=2026.11.03"></script>
+  <script type="module" src="main.js?v=2026.11.03f"></script>
 </body>
 </html>
