--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
         <option value="">Cargando colaboradores…</option>
       </select>
 
-      <!-- Panel con información del colaborador -->
+      <!-- Panel con información del colaborador (SIN "Elegible 2026 desde") -->
       <div id="emp-info" class="emp-info" hidden>
         <div><strong>Localización:</strong> <span id="v-localizacion">-</span></div>
         <div><strong>Departamento:</strong> <span id="v-departamento">-</span></div>
         <div><strong>Bodega:</strong> <span id="v-bodega">-</span></div>
         <div><strong>Ingreso:</strong> <span id="v-ingreso">-</span></div>
-        <div><strong>Elegible 2026 desde:</strong> <span id="v-elegible">-</span></div>
         <div><strong>Cupo 2026:</strong> <span id="v-cupo">-</span></div>
         <div><strong>Usados 2026:</strong> <span id="v-usado">-</span></div>
         <div><strong>Restantes 2026:</strong> <span id="v-restante">-</span></div>
@@ -59,6 +58,6 @@
     window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtiYXNla3Znc2V2dHdqeXB6em56Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIwNTg3NjUsImV4cCI6MjA3NzYzNDc2NX0.a38X1iS6xhlcoVlrjQ99BcoiVf9REMuVzYR82wYnWHY";
   </script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/+esm"></script>
-  <script type="module" src="main.js?v=2026.11.03f"></script>
+  <script type="module" src="main.js?v=2026.11.03i"></script>
 </body>
 </html>
