--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
   <div class="container">
     <h1>Solicitar Vacaciones 2026</h1>
+
+    <!-- Botón para abrir el calendario del gerente -->
+<div class="calendar-link">
+  <a href="manager-calendar.html" class="calendar-button" title="Ver calendario del equipo">
+    📅 Ver calendario del gerente
+  </a>
+</div>
+
+  
     <p class="hint">Selecciona tu nombre y el rango de fechas. Las reglas se validan automáticamente (status = Pendiente).</p>
 
     <div class="card">
