--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Botón para abrir el calendario del gerente -->
 <div class="calendar-link">
   <a href="manager-calendar.html" class="calendar-button" title="Ver calendario del equipo">
-    📅 Ver calendario del gerente
+    📅 Ver calendario
   </a>
 </div>
 
