--- a/manager-calendar.html
+++ b/manager-calendar.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Calendario Vacaciones — Gerencia</title>
+  <title>Calendario Vacaciones</title>
   <link rel="stylesheet" href="manager-calendar.css">
 </head>
 <body>
   <div class="container">
-    <h1>Calendario de Vacaciones (Gerencia)</h1>
+    <h1>Calendario de Vacaciones</h1>
 
     <div class="filters card">
       <div class="row">
