--- a/manager-calendar.html
+++ b/manager-calendar.html
@@ -10,6 +10,12 @@
   <div class="container">
     <h1>Calendario de Vacaciones</h1>
 
+<!-- Botón para regresar al inicio -->
+<div class="back-link">
+  <a href="index.html" class="back-button" title="Regresar a inicio">⬅️ Regresar</a>
+</div>
+
+    
     <div class="filters card">
       <div class="row">
         <div class="col">
