--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   </a>
 </div>
 
+    <div class="calendar-link">
+  <a href="admin-panel.html" class="calendar-button" title="Entrar al panel de administrador">
+    🛠️ Panel Administrador
+  </a>
+</div>
+
   
     <p class="hint">Selecciona tu nombre y el rango de fechas. Las reglas se validan automáticamente (status = Pendiente).</p>
 
