--- a/admin-panel.html
+++ b/admin-panel.html
@@ -20,6 +20,15 @@
       <button id="refresh-btn">🔄 Actualizar</button>
     </div>
     <h1>Panel de Vacaciones (Administrador)</h1>
+
+<div class="filters" style="margin:10px 0; display:flex; gap:12px; align-items:center;">
+  <label for="f-bodega" style="font-weight:600;">Bodega</label>
+  <select id="f-bodega">
+    <option value="">Todas</option>
+  </select>
+</div>
+
+    
     <div id="vac-list"></div>
   </div>
 
