--- a/admin-panel.html
+++ b/admin-panel.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="admin-panel.css?v=1">
 </head>
 <body>
+
+    <!-- Botón para regresar al inicio -->
+  <div class="back-link">
+    <a href="index.html" class="back-button" title="Regresar a inicio">⬅️ Regresar</a>
+  </div>
+  
   <div id="login-screen" class="login-screen">
     <h2>Acceso Administrador</h2>
     <input type="password" id="admin-pass" placeholder="Contraseña">
