--- a/admin-panel.html
+++ b/admin-panel.html
@@ -27,13 +27,7 @@
     </div>
     <h1>Panel de Vacaciones (Administrador)</h1>
 
-<div class="filters" style="margin:10px 0; display:flex; gap:12px; align-items:center;">
-  <label for="f-bodega" style="font-weight:600;">Bodega</label>
-  <select id="f-bodega">
-    <option value="">Todas</option>
-  </select>
-</div>
-
+      <!-- filtros -->
 <div class="filters" style="margin:10px 0; display:flex; gap:12px; align-items:center; flex-wrap: wrap;">
   <label for="f-bodega" style="font-weight:600;">Bodega</label>
   <select id="f-bodega">
