--- a/admin-panel.html
+++ b/admin-panel.html
@@ -40,6 +40,10 @@
     <option value="Aprobado">Autorizadas</option>
     <option value="Rechazado">Rechazadas</option>
   </select>
+
+  <label for="f-overlaps" style="font-weight:600;">Empalmes entre bodegas</label>
+<input type="checkbox" id="f-overlaps" />
+
 </div>
 
     
@@ -52,6 +56,6 @@
     window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtiYXNla3Znc2V2dHdqeXB6em56Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIwNTg3NjUsImV4cCI6MjA3NzYzNDc2NX0.a38X1iS6xhlcoVlrjQ99BcoiVf9REMuVzYR82wYnWHY";
   </script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/+esm"></script>
-<script type="module" src="admin-panel.js?v=rpc-approve-3"></script>
+<script type="module" src="admin-panel.js?v=rpc-approve-4"></script>
 </body>
 </html>
