--- a/admin-panel.html
+++ b/admin-panel.html
@@ -41,8 +41,11 @@
     <option value="Rechazado">Rechazadas</option>
   </select>
 
-  <label for="f-overlaps" style="font-weight:600;">Empalmes entre bodegas</label>
+<label for="f-overlaps" style="font-weight:600;">Empalmes</label>
 <input type="checkbox" id="f-overlaps" />
+
+<label for="f-cross-only" style="font-weight:600;">Solo entre bodegas distintas</label>
+<input type="checkbox" id="f-cross-only" />
 
 </div>
 
