--- a/manager-calendar.html
+++ b/manager-calendar.html
@@ -35,11 +35,13 @@
           <input type="month" id="f-month" />
         </div>
       </div>
-      <div class="legend">
-        <span class="badge pend">Pendiente</span>
-        <span class="badge auth">Autorizada</span>
-        <span class="badge many">Alta concurrencia</span>
-      </div>
+<div class="legend">
+  <span class="badge pend">Pendiente</span>
+  <span class="badge auth">Autorizada</span>
+  <span class="badge many">Alta concurrencia</span>
+  <span class="badge holiday">No se trabaja (feriado)</span>
+</div>
+
     </div>
 
     <div class="toolbar">
