--- a/manager-calendar.html
+++ b/manager-calendar.html
@@ -40,6 +40,7 @@
   <span class="badge auth">Autorizada</span>
   <span class="badge many">Alta concurrencia</span>
   <span class="badge holiday">No se trabaja (feriado)</span>
+  <span class="badge buenfin">Buen Fin</span>
 </div>
 
     </div>
