--- a/admin-panel.html
+++ b/admin-panel.html
@@ -34,6 +34,16 @@
         <option value="">Todas</option>
       </select>
 
+      <label for="f-depto" style="font-weight:600;">Departamento</label>
+      <select id="f-depto">
+        <option value="">Todos</option>
+      </select>
+
+      <label for="f-rol" style="font-weight:600;">Rol</label>
+      <select id="f-rol">
+        <option value="">Todos</option>
+      </select>
+
       <label for="f-status" style="font-weight:600;">Estado</label>
       <select id="f-status">
         <option value="">Todas</option>
@@ -47,6 +57,7 @@
       <label for="f-cross-only" style="font-weight:600;">Solo entre bodegas distintas</label>
       <input type="checkbox" id="f-cross-only" />
     </div>
+
 
     <!-- Lista de solicitudes -->
     <div id="vac-list"></div>
