--- a/admin-panel.html
+++ b/admin-panel.html
@@ -27,8 +27,8 @@
     </div>
     <h1>Panel de Vacaciones (Administrador)</h1>
 
-    <!-- filtros -->
-    <div class="filters" style="margin:10px 0; display:flex; gap:12px; align-items:center; flex-wrap: wrap;">
+<!-- filtros -->
+    <div class="filters" style="margin:10px 0; display:flex; gap:12px; align-items:flex-start; flex-wrap: wrap;">
       <label for="f-bodega" style="font-weight:600;">Bodega</label>
       <select id="f-bodega">
         <option value="">Todas</option>
@@ -40,9 +40,11 @@
       </select>
 
       <label for="f-rol" style="font-weight:600;">Rol</label>
-      <select id="f-rol">
-        <option value="">Todos</option>
-      </select>
+      <div style="display:flex; flex-direction:column; gap:4px;">
+        <select id="f-rol" multiple size="4" style="min-width:150px;">
+        </select>
+        <span style="font-size:11px; color:#555;">(Ctrl/⌘ + clic para varias opciones)</span>
+      </div>
 
       <label for="f-status" style="font-weight:600;">Estado</label>
       <select id="f-status">
@@ -57,6 +59,7 @@
       <label for="f-cross-only" style="font-weight:600;">Solo entre bodegas distintas</label>
       <input type="checkbox" id="f-cross-only" />
     </div>
+
 
 
     <!-- Lista de solicitudes -->
