--- a/manager-calendar.html
+++ b/manager-calendar.html
@@ -13,9 +13,9 @@
     <a href="index.html" class="back-button" title="Regresar a inicio">⬅️ Regresar</a>
   </div>
 
-  
   <div class="container">
     <h1>Calendario de Vacaciones</h1>
+
     <div class="filters card">
       <div class="row">
         <div class="col">
@@ -24,25 +24,36 @@
             <option value="">Todas</option>
           </select>
         </div>
+
         <div class="col">
           <label for="f-depto">Departamento</label>
           <select id="f-depto">
             <option value="">Todos</option>
           </select>
         </div>
+
+        <!-- NUEVO: filtro de Localización -->
+        <div class="col">
+          <label for="f-localizacion">Localización</label>
+          <select id="f-localizacion">
+            <option value="">Todas</option>
+            <!-- opciones dinámicas desde JS -->
+          </select>
+        </div>
+
         <div class="col">
           <label for="f-month">Mes</label>
           <input type="month" id="f-month" />
         </div>
       </div>
-<div class="legend">
-  <span class="badge pend">Pendiente</span>
-  <span class="badge auth">Autorizada</span>
-  <span class="badge many">Alta concurrencia</span>
-  <span class="badge holiday">No se trabaja (feriado)</span>
-  <span class="badge buenfin">Buen Fin</span>
-</div>
 
+      <div class="legend">
+        <span class="badge pend">Pendiente</span>
+        <span class="badge auth">Autorizada</span>
+        <span class="badge many">Alta concurrencia</span>
+        <span class="badge holiday">No se trabaja (feriado)</span>
+        <span class="badge buenfin">Buen Fin</span>
+      </div>
     </div>
 
     <div class="toolbar">
