--- a/manager-calendar.html
+++ b/manager-calendar.html
@@ -21,9 +21,7 @@
         <div class="col" style="min-width:220px;">
           <label for="f-bodega">Bodega</label>
           <!-- Multiselección -->
-          <select id="f-bodega" multiple size="6" class="multi" style="min-width:220px;">
-            <!-- opciones desde JS -->
-          </select>
+          <select id="f-bodega" multiple size="6" class="multi" style="min-width:220px;"></select>
           <small class="hint">Ctrl/⌘ + clic para varias. Deja sin seleccionar para ver todas.</small>
         </div>
 
@@ -82,6 +80,6 @@
     window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtiYXNla3Znc2V2dHdqeXB6em56Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIwNTg3NjUsImV4cCI6MjA3NzYzNDc2NX0.a38X1iS6xhlcoVlrjQ99BcoiVf9REMuVzYR82wYnWHY";
   </script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/+esm"></script>
-  <script type="module" src="manager-calendar.js?v=2026.12.29-bodega-by-loc-and-depto"></script>
+  <script type="module" src="manager-calendar.js?v=2026.12.29-bods-by-loc-or-depto"></script>
 </body>
 </html>
