--- a/admin-panel.html
+++ b/admin-panel.html
@@ -40,6 +40,12 @@
         <option value="">Todos</option>
       </select>
 
+      <!-- NUEVO: Localización -->
+      <label for="f-localizacion" style="font-weight:600;">Localización</label>
+      <select id="f-localizacion">
+        <option value="">Todas</option>
+      </select>
+
       <label for="f-rol" style="font-weight:600;">Rol</label>
       <div style="display:flex; flex-direction:column; gap:4px;">
         <select id="f-rol" multiple size="4" style="min-width:150px;"><!-- opciones desde JS --></select>
